Fix plotsquared api

--- a/build.gradle
+++ b/build.gradle
@@ -95,8 +95,8 @@ subprojects {
     }
 
     repositories {
-        maven {url "https://mvnrepository.com/artifact/"}
         mavenCentral()
+        maven {url "https://mvnrepository.com/artifact/"}
         maven {url "https://repo.dmulloy2.net/content/groups/public/"}
         maven {url "https://repo.destroystokyo.com/repository/maven-public//"}
         //maven {url "https://ci.emc.gs/nexus/content/groups/aikar/" }
@@ -115,7 +115,7 @@ subprojects {
         maven {url "https://repo.dmulloy2.net/nexus/repository/public/"}
         maven {url "https://maven.elmakers.com/repository/"}
         maven {url "https://ci.ender.zone/plugin/repository/everything/"}
-        maven {url "https://plotsquared.com/mvn/"}
+        //maven {url "https://plotsquared.com/mvn/"}
     }
 }
 task aggregatedJavadocs(type: Javadoc, description: 'Generate javadocs from all child projects as if it was a single project', group: 'Documentation') {
