--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,11 +2,10 @@ repositories {
     flatDir {dirs 'lib'}
 }
 dependencies {
-    testCompile 'junit:junit:4.12'
+    compile files('lib/plotsquared-api-3.830.jar')
     compile 'org.yaml:snakeyaml:1.16'
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'net.fabiozumbi12:redprotect:1.9.6'
-    compile 'com.plotsquared:plotsquared-api:3.1'
     compile 'org.primesoft:BlocksHub:2.0'
     compile 'com.github.luben:zstd-jni:1.1.1'
 //    compile 'org.javassist:javassist:3.22.0-CR1'
@@ -14,6 +13,7 @@ dependencies {
     compile(group: 'com.sk89q.worldedit', name: 'worldedit-core', version:'6.1.3-SNAPSHOT') {
         exclude(module: 'bukkit-classloader-check')
     }
+    testCompile 'junit:junit:4.12'
 }
 
 processResources {
