--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,4 +57,4 @@ jobs:
         uses: actions/upload-artifact@v3.1.0
         with:
          name: FAWE
-         path: FastAsyncWorldedit-Legacy/fawe/target/FAWE.jar
+         path: ./target/
