--- a/bukkit/build.gradle
+++ b/bukkit/build.gradle
@@ -47,27 +47,29 @@ processResources {
 
 jar.archiveName="fawe-bukkit-${project.parent.version}.jar"
 jar.destinationDir = file '../mvn/com/boydti/fawe-bukkit/' + project.parent.version
-task createPom << {
-    pom {
-        project {
-            groupId 'com.boydti'
-            artifactId 'fawe-bukkit'
-            version project.parent.version
+task createPom {
+    doLast {
+        pom {
+            project {
+                groupId 'com.boydti'
+                artifactId 'fawe-bukkit'
+                version project.parent.version
+            }
         }
-    }
-    .getEffectivePom()
-            .setDependencies(new ArrayList<>())
-            .writeTo("../mvn/com/boydti/fawe-bukkit/${project.parent.version}/fawe-bukkit-${project.parent.version}.pom")
-    pom {
-        project {
-            groupId 'com.boydti'
-            artifactId 'fawe-bukkit'
-            version 'latest'
+                .getEffectivePom()
+                .setDependencies(new ArrayList<>())
+                .writeTo("../mvn/com/boydti/fawe-bukkit/${project.parent.version}/fawe-bukkit-${project.parent.version}.pom")
+        pom {
+            project {
+                groupId 'com.boydti'
+                artifactId 'fawe-bukkit'
+                version 'latest'
+            }
         }
+                .getEffectivePom()
+                .setDependencies(new ArrayList<>())
+                .writeTo("../mvn/com/boydti/fawe-bukkit/latest/fawe-bukkit-latest.pom")
     }
-    .getEffectivePom()
-            .setDependencies(new ArrayList<>())
-            .writeTo("../mvn/com/boydti/fawe-bukkit/latest/fawe-bukkit-latest.pom")
 }
 task copyFiles {
     doLast {
@@ -97,4 +99,4 @@ shadowJar.doLast {
         ant.checksum file: task.archivePath
 }
 
-build.dependsOn(shadowJar);
+build.dependsOn(shadowJar)
