--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,9 @@ jobs:
         run: "java -jar BuildTools.jar --rev 1.12.2"
       - name: "Clean Build"
         run: "./gradlew clean assemble build"
+      - name: Writing version
+        run: |
+          echo "release_version=$(cat ./version.txt)" >> $GITHUB_ENV
       - name: Cleanup Gradle Cache
         # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
         # Restoring these files from a GitHub Actions cache might cause problems for future builds.
@@ -56,5 +59,5 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
-         name: FAWE
+         name: "FastWorldEdit-${{ env.release_version }}"
          path: ./target/
