--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,9 @@ jobs:
     runs-on: "${{ matrix.os }}"
     steps:
       - name: "Checkout Repository"
-        uses: "actions/checkout@v2.3.4"
+        uses: "actions/checkout@v3"
+        with:
+          fetch-depth: 0
       - name: "Setup JDK ${{ matrix.java }}"
         uses: "actions/setup-java@v1.4.3"
         with:
