--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     strategy:
       matrix:
-        java: ["1.8"]
+        java: ["8"]
         os: ["ubuntu-latest"]
     runs-on: "${{ matrix.os }}"
     steps:
@@ -15,11 +15,12 @@ jobs:
         with:
           fetch-depth: 0
       - name: "Setup JDK ${{ matrix.java }}"
-        uses: "actions/setup-java@v1.4.3"
+        uses: "actions/setup-java@v3"
         with:
+          distribution: 'zulu'
           java-version: "${{ matrix.java }}"
       - name: "Cache Gradle"
-        uses: "actions/cache@v2.1.4"
+        uses: "actions/cache@v3"
         with:
           path: |
             "~/.gradle/caches"
