--- a/build.gradle
+++ b/build.gradle
@@ -41,33 +41,20 @@ ext {
         major = minor = patch = 0;
         def commits = git.log().iterator()
         while (commits.hasNext()) {
-            int majorCount, minorCount, patchCount;
-            patchCount = minor == 0 && major == 0 ? 1 : 0;
             def commit = commits.next()
-            for (String line : commit.fullMessage.tokenize("\n")) {
-                switch (line.replaceAll("- ", "").split(" ")[0].toLowerCase()) {
-                    case "minor":
-                    case "added":
-                    case "add":
-                    case "change":
-                    case "changed":
-                    case "changes":
-                        if (major == 0) {
-                            minorCount = 1; patchCount = 0;
-                        }
-                        break;
-                    case "refactor":
-                    case "remove":
-                    case "major":
-                        patchCount = minorCount = 0;
-                        majorCount = 1;
-                        break;
-                }
+            switch (commit.fullMessage.toLowerCase()){
+                case ~/(?s).*(major|remove|refactor).*/:
+                    major += 1
+                    break
+                case ~/(?s).*(minor|add|change|fix).*/:
+                    /* we're looping from head, so major == 0 — latest major change,
+                    so we add minor and patch to it that came before */
+                    if (major == 0) minor += 1
+                    break
+                default:
+                    if (major == 0 && minor == 0) patch += 1
             }
-            major += majorCount;
-            minor += minorCount;
-            patch += patchCount;
-            parents = commit.getParentIds()
+            index++
         }
         buildNumber = "-${index}"
         semver = "-${major}.${minor}.${patch}"
