--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import org.ajoberstar.grgit.Grgit
+
 buildscript {
     repositories {
         mavenCentral()
@@ -25,20 +27,19 @@ clean { delete "target" }
 
 group = 'com.boydti.fawe'
 
-ext {
+task setVersion {
     def revision = "unknown"
     def buildNumber = ""
     def semver = ""
     def date = ""
     try {
-        git = Grgit.open()
+        def git = Grgit.open()
         date = git.head().date.format("yy.MM.dd")
         revision = "-${git.head().abbreviatedId}"
         println "Total number of commits: " + git.log().size()
-        parents = git.head().parentIds;
-        index = -67;  // Offset to match CI
-        int major, minor, patch;
-        major = minor = patch = 0;
+        def index = -67  // Offset to match CI
+        int major, minor, patch
+        major = minor = patch = 0
         def commits = git.log().iterator()
         while (commits.hasNext()) {
             def commit = commits.next()
