--- a/core/build.gradle
+++ b/core/build.gradle
@@ -36,20 +36,15 @@ task createPom {
                 artifactId 'fawe-api'
                 version project.parent.version
             }
-        }
-                .getEffectivePom()
-                .setDependencies(new ArrayList<>())
-                .writeTo("../mvn/com/boydti/fawe-api/${project.parent.version}/fawe-api-${project.parent.version}.pom")
+        }.writeTo("../mvn/com/boydti/fawe-api/${project.parent.version}/fawe-api-${project.parent.version}.pom")
+
         pom {
             project {
                 groupId 'com.boydti'
                 artifactId 'fawe-api'
                 version 'latest'
             }
-        }
-                .getEffectivePom()
-                .setDependencies(new ArrayList<>())
-                .writeTo("../mvn/com/boydti/fawe-api/latest/fawe-api-latest.pom")
+        }.writeTo("../mvn/com/boydti/fawe-api/latest/fawe-api-latest.pom")
     }
 }
 
